[gd_scene load_steps=4 format=2]

[ext_resource path="res://World/World.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/ZoneBounds.tscn" type="PackedScene" id=3]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftZone" parent="." instance=ExtResource( 3 )]
position = Vector2( 256, 300 )

[node name="Player1" parent="LeftZone" instance=ExtResource( 2 )]
position = Vector2( -1, 6 )
collision_mask = 0

[node name="RightZone" parent="." instance=ExtResource( 3 )]
position = Vector2( 768, 300 )

[node name="Top" parent="RightZone" index="0"]
collision_layer = 2
collision_mask = 2

[node name="Bottom" parent="RightZone" index="1"]
collision_layer = 2
collision_mask = 2

[node name="Left" parent="RightZone" index="2"]
collision_layer = 2
collision_mask = 2

[node name="Right" parent="RightZone" index="3"]
collision_layer = 2
collision_mask = 2

[node name="Polygon2D" parent="RightZone" index="4"]
color = Color( 1, 1, 1, 1 )

[node name="Player2" parent="RightZone" instance=ExtResource( 2 )]
position = Vector2( 11, 7 )
collision_layer = 2
collision_mask = 0
player_index = 1

[connection signal="death" from="LeftZone/Player1" to="." method="_on_Player1_death"]
[connection signal="death" from="RightZone/Player2" to="." method="_on_Player2_death"]

[editable path="LeftZone"]
[editable path="RightZone"]
